# thematic-analysis

./: .gitignore  README.md  analysis.feather  analysis.ipynb  analysis_with_embeddings.feather  analysis_with_embeddings_150_sentences.feather  bert_topic_modeling.ipynb  bert_topic_modeling_min20_openai_sentences copy.ipynb  bert_topic_modeling_min20_openai_sentences.ipynb  bert_topic_modeling_min5_minilm_sentences.ipynb  bert_topic_modeling_sentences_only_file.ipynb  main.py  output.md  pyproject.toml  subset_documents_classified.feather  urls.json  urls.txt
output/: 1-metadata.txt  1-text.txt  1.json  2-metadata.txt  2-text.txt  2.json
slop_bert_model/: topic_embeddings.safetensors  topics.json
slop_min150_openai_sentences.ipynb/: topic_embeddings.safetensors  topics.json
slop_min15_df1_openai_sentences.ipynb/: topic_embeddings.safetensors  topics.json
slop_min40_openai_sentences.ipynb/: topic_embeddings.safetensors  topics.json
slop_min5_minilm/: topic_embeddings.safetensors  topics.json
slop_min5_minilm_sentences/: topic_embeddings.safetensors  topics.json
slop_min5_openai-large/: topic_embeddings.safetensors  topics.json
src/taguetura/: main.py
subset/: topic_embeddings.safetensors  topics.json
